--- a/cracker/Cargo.toml
+++ b/cracker/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+crypto-hash = "0.3.4"
+rand = "0.8"
